# mc_aixi_mpi

./: .#environment.c  .#summary.c  .gitignore  CMakeLists.txt  MPI_Makefile  Makefile  README.md  bit_vector.c  bit_vector.h  environment.c  git_status  main.c  main_aixi  main_aixi.serial.debug  summary.c  utils.c
_object/: class.c  class.r
_utils/: macros.h  types.h
agent/: agent.c  agent.h  agent.h.gch  agent.r  class.r  new.c
docs/: latex_file.tex
environment/: 1d_maze.c  1d_maze.h  1d_maze.r  class.c  class.h  class.h.gch  class.r  coin_flip.c  coin_flip.h  coin_flip.h.gch  coin_flip.r  env.h  environment.c  environment.h  environment.h.gch  environment.r  macros.h  new.h  types.h
predict/: Makefile  bad.txt  context_tree.c  context_tree.h  context_tree_node.c  context_tree_node.h  ct_node_list.c  ctw_iterator.c  ctw_list.c  ctw_list.h  ctw_test.c  main.c  predict.c
search/: dict.c  dict.h  dict.h.gch  monte_node.c  monte_node.h  monte_node.h.gch  search.c
